service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sampleapp.com
  name: sampleapp-svc
spec:
  ports:
    - name: 80-80
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: sampleapp.com
  type: ClusterIP
status:
  loadBalancer: {}
