ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sampleapp.com
spec:
  rules:
    - host: sampleapp.com
      http:
        paths:
          - backend:
              service:
                name: sampleapp-svc
                port:
                  number: 80
            path: /
            pathType: Prefix
